# esp32s3-ble-hid

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
