[package]
name = "esp32s3-ble-hid"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32s3"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.13.0", features = ["critical-section", "esp32s3", "colors", "log"] }
esp-wifi = { version = "0.12.0", features = ["wifi", "ble", "esp32s3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-sync = "0.6.2"
bleps = { git = "https://github.com/bjoernQ/bleps.git", package = "bleps", features = [
    "macros",
    "async",
    "crypto",
] }
rand_core = "0.6.4"
embedded-hal-async = "1.0.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-time = "0.4.0"
esp-alloc = "0.6.0"
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
log = "0.4.26"
